# symbios-neat

./: .gitignore  Cargo.toml  README.md
benches/: neat_bench.rs
examples/: xor.rs
src/: activation.rs  evaluator.rs  gene.rs  genome.rs  innovation.rs  lib.rs  topology.rs
tests/: integration_tests.rs
