[package]
name = "symbios-neat"
version = "0.1.0"
edition = "2021"
authors = ["Janus"]
description = "NEAT engine for morphogenetic engineering with CPPN support"
license = "MIT"
repository = "https://github.com/codewright/symbios-neat"
keywords = ["neat", "neuroevolution", "cppn", "genetic-algorithm", "neural-network"]
categories = ["science", "algorithms", "simulation"]

[dependencies]
symbios-genetics = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
slotmap = { version = "1.0", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand_chacha = "0.9"
serde_json = "1.0"

[[bench]]
name = "neat_bench"
harness = false

[features]
default = []
